[gd_scene format=3 uid="uid://bp5sc7sxk6dmv"]

[ext_resource type="Script" uid="uid://b5lynxgly4ipl" path="res://addons/interactive_cave_generation/generation_panel.gd" id="1_nbawv"]
[ext_resource type="Script" uid="uid://bi1fcx14mq1je" path="res://addons/interactive_cave_generation/cave_generator_resource_picker.gd" id="2_102p1"]

[sub_resource type="LabelSettings" id="LabelSettings_nb3f1"]
font_size = 18
font_color = Color(0.42352942, 1, 1, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_102p1"]
font_size = 12
font_color = Color(0.26999682, 0.9946839, 0.54190123, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="GenerationPanel" type="VBoxContainer" unique_id=1073525388]
script = ExtResource("1_nbawv")

[node name="Label" type="Label" parent="." unique_id=1656085971]
layout_mode = 2
text = "Cave Generator"
label_settings = SubResource("LabelSettings_nb3f1")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=690087653]
layout_mode = 2
alignment = 1

[node name="ButtonClear" type="Button" parent="HBoxContainer" unique_id=1488877726]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Clear"

[node name="ButtonUndo" type="Button" parent="HBoxContainer" unique_id=391602680]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Undo
"

[node name="ButtonGenerate" type="Button" parent="HBoxContainer" unique_id=1292320316]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Generate
"

[node name="HSeparator" type="HSeparator" parent="." unique_id=873238296]
layout_mode = 2

[node name="CaveResourcePicker" type="EditorResourcePicker" parent="." unique_id=1741627109]
layout_mode = 2
base_type = "PackedScene"
script = ExtResource("2_102p1")
metadata/_custom_type_script = "uid://bi1fcx14mq1je"

[node name="HBoxContainer2" type="HBoxContainer" parent="." unique_id=2101901850]
layout_mode = 2
alignment = 1

[node name="ButtonClearDecor" type="Button" parent="HBoxContainer2" unique_id=482095172]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "ClearDecor
"

[node name="ButtonRandomize" type="Button" parent="HBoxContainer2" unique_id=491886573]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Randomize"

[node name="LabelDecorDensity" type="Label" parent="." unique_id=1051511561]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Decoration Density"
label_settings = SubResource("LabelSettings_102p1")

[node name="SliderDecorDensity" type="HSlider" parent="." unique_id=36117411]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/grabber_offset = 12
ticks_on_borders = true
